# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flask_config.py  item.py  main.tf  mongodb.py  oauth.py  outputs.tf  pyproject.toml  requirements.txt  session_items.py  to_do_item.py  todo_item.py  trello.py  trello_config.py  variables.tf  view_model.py
documentation/: diagrams.drawio
templates/: index.html
tests/: test_app.py  test_view_model.py
tests_e2e/: test_app.py
